--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -20,6 +20,10 @@
   box-sizing: border-box;
 }
 
+body {
+  overflow: hidden;
+}
+
 .bg-yellow {
   transition: 0.5s ease;
   background: $yellow;
